#############################################################################
BETA PUBLIC RELEASE VERSION 0.2.6       ??-??-03
#############################################################################

  CHANGES THAT AFFECT USERS:
  * Fixed bug in PQR parsing that can cause PDB/PQR files to be mis-read when
    they contain residues with numbers in their names
  * Added new asynchronous mode in mg-para parallel calculations to enable
    running on-demand and/or limited resources
  * Finished fe-manual mode for ELEC calculations -- this is the adaptive
    finite element solver
  * Fixed bug when writing out number/charge density:  unrealistic densities
    reported inside iVdW surface.
  * Added documetnation for fe-manual
  * Fixed bug in VMD read_dx utility
  * Modified mechanism for cubic-spline output, fixing a bug associated with
    zero-radius atoms
  * Added following aliases for some of the more obscure parameters in the
    input files:
      chgm 0 ==> chgm spl0
      chgm 1 ==> chgm spl2
      srfm 0 ==> srfm mol
      srfm 1 ==> srfm smol
      srfm 2 ==> srfm spl2
      bcfl 0 ==> bcfl zero
      bcfl 1 ==> bcfl sdh
      bcfl 2 ==> bcfl mdh
      bcfl 4 ==> bcfl focus
      calcenergy 0 ==> calcenergy no
      calcenergy 1 ==> calcenergy total
      calcenergy 2 ==> calcenergy comps
      calcforce 0 ==> calcforce no
      calcforce 1 ==> calcforce total
      calcforce 2 ==> calcforce comps
    Example input files have been updated to reflect this change.  NOTE:
    the code is backward-compliant; i.e., old input files WILL still work.
  * Added new READ options "PARM" and "MOL PDB", see documentation for more
    information.  These options allow users to use unparameterized PDB files
    together with a parameter database.
  * Added function for calculating norms on DX grids: see tools/mesh/norm
  * Updated the documentation
  * Now include support for chain IDs and other optional fields in PQR/PDB
    files