@@ -4,9 +4,12 @@ BETA PUBLIC RELEASE VERSION 0.2.6       ??-??-03
 
   CHANGES THAT AFFECT USERS:
   * Fixed bug in PQR parsing that can cause PDB/PQR files to be mis-read when
-    they contain residues with numbers in their names
+    they contain residues with numbers in their names (Thanks to Robert Konecny
+    and Joanna Trylska)
   * Added new asynchronous mode in mg-para parallel calculations to enable
     running on-demand and/or limited resources
+  * Added new script (tools/manip/async.sh) to convert mg-para calculations
+    in mg-async calculations
   * Finished fe-manual mode for ELEC calculations -- this is the adaptive
     finite element solver
   * Fixed bug when writing out number/charge density:  unrealistic densities
